--- a/lang/en.json
+++ b/lang/en.json
@@ -1,6 +1,6 @@
 {
     "header": {
-        "FLIPr.tv Official Web": "FLIPr.tv Official Web",
+        "Link to FLIPr.tv": "Link to FLIPr.tv",
         "Watch FLIPr.tv on the Web": "Watch FLIPr.tv on the Web",
         "Partner Sign-in": "Partner Sign-in",
         "Log out": "Log out"
