--- a/lang/zh.json
+++ b/lang/zh.json
@@ -1,6 +1,6 @@
 {
     "header": {
-        "FLIPr.tv Official Web": "FLIPr.tv官方網站",
+        "Link to FLIPr.tv": "FLIPr.tv官方網站",
         "Watch FLIPr.tv on the Web": "FLIPr.tv app",
         "Partner Sign-in": "合作夥伴登入",
         "Log out": "登出"
