--- a/lang/en.json
+++ b/lang/en.json
@@ -354,7 +354,7 @@
         },
         "channel-list": {
             "Sorted by": "Sorted by",
-            "You will change the order of program list to \"update time\", it will sort by update time of programs automatically so you can't change the order manually except set on top programs.": "You will change the order of program list to \"update time\", it will sort by update time of programs automatically so you can't change the order manually except set on top programs.",
+            "You will change the order of program list to \"update time\", it will sort by update time of programs automatically so you can't change the order manually except set this BEST programs.": "You will change the order of program list to \"update time\", it will sort by update time of programs automatically so you can't change the order manually except set this BEST programs.",
             "Updated time": "Updated time ",
             "Customized Order": "Customized Order",
             "Best within 20 characters": "Best within 20 characters",
@@ -366,10 +366,13 @@
             "Add programs sub": "&nbsp;&nbsp;&nbsp;programs",
             "Please input program URL": "Please input program URL",
             "Please input program name or curator name": "Please input program name or curator name",
-            "Set on top": "Set on top",
-            "Remove from top": "Remove from top",
+            "Set this BEST": "Set this BEST",
+            "Remove from BEST": "Remove from BEST",
+            "Set this HOT": "Set this HOT",
+            "Remove from HOT": "Remove from HOT",
             "Remove program": "Remove program",
-            "You can only set 4 programs on top": "You can only set 4 programs on top",
+            "You can only set ? programs on BEST": "You can only set {0} programs on BEST",
+            "You can only set ? programs on TOP": "You can only set {0} programs on TOP",
             "Please fill in your channel name.": "Please fill in your channel name.",
             "Program List : ? Programs": "Program List : {0} Programs"
         }
