--- a/lang/zh.json
+++ b/lang/zh.json
@@ -300,9 +300,13 @@
             "Add programs sub": "",
             "Please input program URL": "請輸入節目網址",
             "Please input program name or curator name": "請輸入節目名稱或 Curator 名稱",
-            "Set on top": "置頂",
-            "Remove from top": "取消置頂",
+            "Set this BEST": "設為推薦",
+            "Remove from BEST": "取消推薦",
+            "Set this HOT": "設為熱門",
+            "Remove from HOT": "取消熱門",
             "Remove program": "移除此節目",
+            "You can only set ? programs on BEST": "只能設定 {0} 推薦節目",
+            "You can only set ? programs on HOT": "只能設定 {0} 熱門節目",
             "Add program": "增加此節目",
             "You can only set 4 programs on top": "只能設定4個置頂節目",
             "Channel name can't be empty": "頻道名稱不可空白",
@@ -438,7 +442,7 @@
             "Remove from HOT": "取消熱門",
             "Remove program": "移除此節目",
             "You can only set ? programs on BEST": "只能設定 {0} 推薦節目",
-            "You can only set ? programs on TOP": "只能設定 {0} 熱門節目",
+            "You can only set ? programs on HOT": "只能設定 {0} 熱門節目",
             "Please fill in your channel name.": "請輸入頻道名稱",
             "Program List : ? Programs": "節目列表 : {0} 個節目"
         }
