1. merge css file and image file from 9x9_ui (James) 2. fix popup message over float , change "Remove from HOT" to "remove HOT" , "Remove from BEST" to "remove BEST"

--- a/lang/en.json
+++ b/lang/en.json
@@ -244,9 +244,9 @@
             "Please input program URL": "Please input program URL",
             "Please input program name or curator name": "Please input program name or curator name",
             "Set this BEST": "Set this BEST",
-            "Remove from BEST": "Remove from BEST",
+            "remove BEST": "remove BEST",
             "Set this HOT": "Set this HOT",
-            "Remove from HOT": "Remove from HOT",
+            "remove HOT": "remove HOT",
             "You can only set ? programs on BEST": "You can only set {0} programs on BEST",
             "You can only set ? programs on HOT": "You can only set {0} programs on HOT",
             "Remove from top": "Remove from top",
@@ -372,9 +372,9 @@
             "Please input program URL": "Please input program URL",
             "Please input program name or curator name": "Please input program name or curator name",
             "Set this BEST": "Set this BEST",
-            "Remove from BEST": "Remove from BEST",
+            "remove BEST": "remove BEST",
             "Set this HOT": "Set this HOT",
-            "Remove from HOT": "Remove from HOT",
+            "remove HOT": "remove HOT",
             "Remove program": "Remove program",
             "You can only set ? programs on BEST": "You can only set {0} programs on BEST",
             "You can only set ? programs on HOT": "You can only set {0} programs on HOT",
