--- a/lang/zh.json
+++ b/lang/zh.json
@@ -301,9 +301,9 @@
             "Please input program URL": "請輸入節目網址",
             "Please input program name or curator name": "請輸入節目名稱或 Curator 名稱",
             "Set this BEST": "設為推薦",
-            "Remove from BEST": "取消推薦",
+            "remove BEST": "取消推薦",
             "Set this HOT": "設為熱門",
-            "Remove from HOT": "取消熱門",
+            "remove HOT": "取消熱門",
             "Remove program": "移除此節目",
             "You can only set ? programs on BEST": "只能設定 {0} 推薦節目",
             "You can only set ? programs on HOT": "只能設定 {0} 熱門節目",
@@ -437,9 +437,9 @@
             "Please input program URL": "請輸入節目網址",
             "Please input program name or curator name": "請輸入節目名稱或 Curator 名稱",
             "Set this BEST": "設為推薦",
-            "Remove from BEST": "取消推薦",
+            "remove BEST": "取消推薦",
             "Set this HOT": "設為熱門",
-            "Remove from HOT": "取消熱門",
+            "remove HOT": "取消熱門",
             "Remove program": "移除此節目",
             "You can only set ? programs on BEST": "只能設定 {0} 推薦節目",
             "You can only set ? programs on HOT": "只能設定 {0} 熱門節目",
