#12310 PCS Main channels 的 "+Add Channel Set" 文字需改成 "+Add Channel"

--- a/lang/en.json
+++ b/lang/en.json
@@ -341,7 +341,7 @@
             "Are you sure to remove this channel set?": "Are you sure to remove this channel set?",
             "Unsaved changes will be lost, are you sure you want to leave?": "Unsaved changes will be lost, are you sure you want to leave?",
             "Processing...": "處理中...",
-            "Add Channel Set": "Add Channel Set",
+            "Add Channel": "Add Channel",
             "Edit Channel Set": "Edit Channel Set",
             "Cancel": "Cancel",
             "Yes": "Yes",
