--- a/lang/zh.json
+++ b/lang/zh.json
@@ -406,7 +406,7 @@
             "Are you sure to remove this channel set?": "你確定要刪除這個頻道？",
             "Unsaved changes will be lost, are you sure you want to leave?": "未儲存資料將遺失，確定離開？",
             "Processing...": "處理中...",
-            "Add Channel Set": "增加頻道",
+            "Add Channel": "增加頻道",
             "Edit Channel Set": "編輯頻道",
             "Cancel": "取消",
             "Yes": "確定",
@@ -431,7 +431,7 @@
             "Channel Name": "頻道名稱 ",
             "Program List": "節目列表 ",
             "Programs": "節目",
-            "Add Channel Set": "增加頻道",
+            "Add Channel": "增加頻道",
             "Add programs": "新增節目",
             "Add programs sub": "",
             "Please input program URL": "請輸入節目網址",
