--- a/lang/en.json
+++ b/lang/en.json
@@ -432,7 +432,11 @@
             "You don't have any programs yet": "You don't have any programs yet",
             "Create a new program": "Create a new program",
             "Create your own <strong>personal and unique</strong> program.": "Create your own <strong>personal and unique</strong> program.",
-            "Add online videos into episode and start to <strong>curate your own program.</strong>": "Add online videos into episode and start to <strong>curate your own program.</strong>"
+            "Add online videos into episode and start to <strong>curate your own program.</strong>": "Add online videos into episode and start to <strong>curate your own program.</strong>",
+            "YouTube sync program": "YouTube sync program",
+            "Sort by YouTube order": "Sort by YouTube order",
+            "Sort by YouTube reverse order": "Sort by YouTube reverse order",
+            "On program store": "On program store"
         },
         "overlay": {
             "Create a New Program": "Create a New Program",
