Add programs into your "channel name" ---> Add programs into “channel name” 中文：增加節目到“channel name”頻道
Channel Name ---> Search by
中文翻譯不需修改

按鈕"Search" ---> "Go"
中文翻譯不需修改

--- a/lang/en.json
+++ b/lang/en.json
@@ -325,13 +325,13 @@
         "portal-add-layer": {
             "Program URL": "Program URL",
             "Keywords": "Keywords",
-            "Search": "Search",
+            "Go": "Go",
             "Add": "Add",
             "Find [<span>?</span>] programs.": "Find [<span>{0}</span>] programs.",
             "Your search - [xxx] didn't match any programs.": "Your search - [<span>{0}</span>] didn't match any programs.",
-            "Channel Name:": "Channel Name:",
+            "Search By:": "Search By:",
             "Results:": "Results:",
-            "Add programs into your “<span>Set 2</span>”": "Add programs into your “<span>{0}</span>”",
+            "Add programs into “<span>Set 2</span>”": "Add programs into “<span>{0}</span>”",
             "Please fill in the program url to search.": "Please fill in the program url to search.",
             "Please fill in the correct url.": "Please fill in the correct url.",
             "Please fill in the keywords to search.": "Please fill in the keywords to search.",
