--- a/lang/zh.json
+++ b/lang/zh.json
@@ -390,13 +390,13 @@
         "portal-add-layer": {
             "Program URL": "節目網址",
             "Keywords": "關鍵字",
-            "Search": "搜尋",
+            "Go": "搜尋",
             "Add": "增加",
             "Find [<span>?</span>] programs.": "找到 [<span>{0}</span>] 個節目。",
             "Your search - [xxx] didn't match any programs.": "找不到符合 [<span>{0}</span>] 的節目。",
-            "Channel Name:": "搜尋依:",
+            "Search By:": "搜尋依:",
             "Results:": "搜尋結果:",
-            "Add programs into your “<span>Set 2</span>”": "增加節目到你的 “<span>{0}</span>”頻道",
+            "Add programs into “<span>Set 2</span>”": "增加節目到 “<span>{0}</span>” 頻道",
             "Please fill in the program url to search.": "請輸入節目網址搜尋",
             "Please fill in the correct url.": "請輸入正確網址搜尋",
             "Please fill in the keywords to search.": "請輸入關鍵字搜尋",
