--- a/lang/zh.json
+++ b/lang/zh.json
@@ -395,6 +395,7 @@
             "Find [<span>?</span>] programs.": "找到 [<span>{0}</span>] 個節目。",
             "Your search - [xxx] didn't match any programs.": "找不到符合 [<span>{0}</span>] 的節目。",
             "Search By:": "搜尋依:",
+            "My programs:": "我的節目:",
             "Results:": "搜尋結果:",
             "Add programs into “<span>Set 2</span>”": "增加節目到 “<span>{0}</span>” 頻道",
             "Please fill in the program url to search.": "請輸入節目網址搜尋",
