[Program store] 在 Program store 的 promotion category ，要 Add program to category 彈出的 search overlay，沒有出現 My program list，目前是空白。 正確應與 Main channel 彈出的 Search overlay 一樣，會看見 Admin 帳號下已經加入 system store 的 programs。

--- a/lang/zh.json
+++ b/lang/zh.json
@@ -282,7 +282,8 @@
             "Add": "增加",
             "Find [<span>?</span>] programs.": "找到 [<span>{0}</span>] 個節目。",
             "Your search - [xxx] didn't match any programs.": "找不到符合 [<span>{0}</span>] 的節目。",
-            "Find Programs:": "搜尋依:",
+            "Search by:": "搜尋依:",
+            "My programs:": "我的節目:",
             "Results:": "搜尋結果:",
             "Add programs into your “<span>Set 2</span>”": "增加節目到你的 “<span>{0}</span>”推薦類別",
             "Please fill in the program url to search.": "請輸入節目網址搜尋",
@@ -394,7 +395,7 @@
             "Add": "增加",
             "Find [<span>?</span>] programs.": "找到 [<span>{0}</span>] 個節目。",
             "Your search - [xxx] didn't match any programs.": "找不到符合 [<span>{0}</span>] 的節目。",
-            "Search By:": "搜尋依:",
+            "Search by:": "搜尋依:",
             "My programs:": "我的節目:",
             "Results:": "搜尋結果:",
             "Add programs into “<span>Set 2</span>”": "增加節目到 “<span>{0}</span>” 頻道",
