--- a/lang/en.json
+++ b/lang/en.json
@@ -231,7 +231,9 @@
             "Processing...": "Processing..."
         },
         "portal-add-layer": {
-          "Add programs into your “<span>Set 2</span>”": "Add programs into your \"<span>{0}</span>\" promotion category"
+          "Find [<span>?</span>] programs.": "Find [<span>{0}</span>] programs.",
+          "Your search - [xxx] didn't match any programs.": "Your search - [<span>{0}</span>] didn't match any programs.",
+          "Add programs into your “<span>Set 2</span>”": "Add programs into \"<span>{0}</span>\" promotion category"
         },
         "channel-list": {
             "Program List : ? Programs": "Program List : {0} Programs",
@@ -329,7 +331,7 @@
             "Add": "Add",
             "Find [<span>?</span>] programs.": "Find [<span>{0}</span>] programs.",
             "Your search - [xxx] didn't match any programs.": "Your search - [<span>{0}</span>] didn't match any programs.",
-            "Search By:": "Search By:",
+            "Search by:": "Search by:",
             "Results:": "Results:",
             "Add programs into “<span>Set 2</span>”": "Add programs into “<span>{0}</span>”",
             "Please fill in the program url to search.": "Please fill in the program url to search.",
