--- a/lang/zh.json
+++ b/lang/zh.json
@@ -285,7 +285,7 @@
             "Search by:": "搜尋依:",
             "My programs:": "我的節目:",
             "Results:": "搜尋結果:",
-            "Add programs into your “<span>Set 2</span>”": "增加節目到你的 “<span>{0}</span>”推薦類別",
+            "Add programs into “<span>Set 2</span>”": "增加節目到你的 “<span>{0}</span>”推薦類別",
             "Please fill in the program url to search.": "請輸入節目網址搜尋",
             "Please fill in the correct url.": "請輸入正確網址搜尋",
             "Please fill in the keywords to search.": "請輸入關鍵字搜尋",
